[package]
name = "rtic-stm32-filament-measurement"
version = "0.1.0"
authors = ["RajeshPachaikani <rajeshpachaikani@live.in>"]
edition = "2018"

[dependencies]
# Stm32F103C8
cortex-m-rt = "0.7.1"
cortex-m = "0.7.4"
cortex-m-rtic = "1.0.0"
hal = { package = "stm32f1xx-hal", version = "0.9.0" , features = ["stm32f103", "medium"] }
cortex-m-semihosting = "0.5.0"
panic-semihosting = "0.6.0"
panic-halt = "0.2.0"
systick-monotonic = "1.0.0"
