[package]
name = "rtic-stm32-filament-measurement"
version = "0.1.0"
authors = ["RajeshPachaikani <rajeshpachaikani@live.in>"]
edition = "2018"

[dependencies]
# Stm32F103C8
cortex-m-rt = "0.7.1"
cortex-m = "0.7.4"
cortex-m-rtic = "1.0.0"
cortex-m-semihosting = "0.5.0"
hal = { package = "stm32f1xx-hal", version = "0.9.0" , features = ["stm32f103", "rt","medium"] }
panic-semihosting = "0.6.0"
systick-monotonic = "1.0.0"
lcd-lcm1602-i2c = "0.1.0"
heapless = "0.7.12"
alloc-cortex-m = "0.4.2"

[[bin]]
name = "rtic-stm32-filament-measurement"
test = false
bench = false

[profile.dev]
codegen-units = 1
debug = 0
lto = true
opt-level = "z"

[profile.release]
opt-level = "s"   # optimize for size
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations